--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "format": "npx prettier . --write"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.39",
+    "@upstash/ratelimit": "^2.0.1",
+    "@upstash/redis": "^1.33.0",
+    "ai": "^3.2.35",
+    "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
