--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.33.0",
     "ai": "^3.2.35",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "sonner": "^1.5.0"
+    "react-markdown": "^9.0.1",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
