--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat.nicholasly.com",
+  "name": "chat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,16 +8,17 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "format": "npx prettier . --write"
+    "format": "npx prettier . --write",
+    "format:check": "prettier . --check"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.39",
+    "@ai-sdk/openai": "^0.0.71",
     "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.33.0",
     "ai": "^3.2.35",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.414.0",
-    "next": "14.2.5",
+    "lucide-react": "^0.454.0",
+    "next": "^15.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
@@ -26,11 +27,14 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
-    "@types/node": "^20",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/node": "^22.8.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "babel-plugin-react-compiler": "^19.0.0-beta-63b359f-20241101",
+    "eslint": "^9.14.0",
+    "eslint-config-next": "^15.0.2",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-63b359f-20241101",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
