--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format:check": "prettier . --check"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.71",
+    "@ai-sdk/anthropic": "^0.0.55",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.33.0",
     "ai": "^3.2.35",
@@ -22,8 +23,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "server-only": "^0.0.1",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
